# Polyweat

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: install.sh  polyweat.service
scripts/: smoke_test.py
src/polyweat/: __init__.py  __main__.py  cli.py  config.py  db.py  logger.py  models.py  runner.py
src/polyweat/api/: __init__.py  _http.py  clob.py  gamma.py  open_meteo.py
src/polyweat/parser/: __init__.py  cities.py  city_parser.py  date_parser.py  filter.py  threshold_parser.py
src/polyweat/strategy/: __init__.py  confidence.py  decision.py  predictor.py
src/polyweat/trading/: __init__.py  risk.py  trader.py
