[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyweat"
version = "0.1.0"
description = "High-confidence Polymarket weather/temperature trading bot"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Polyweat" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
live = ["py-clob-client>=0.17.0"]

[project.scripts]
polyweat = "polyweat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
